--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^3.8.3",
     "jquery": "^3.7.1",
     "owl.carousel": "^2.3.4",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.51.0",
     "swiper": "^11.0.7",
     "vue": "^3.2.13",
     "vue-carousel": "^0.18.0",
@@ -24,7 +26,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1"
   }
 }
